--- a/index.html
+++ b/index.html
@@ -7,44 +7,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="globals.css" type="text/css">
     <script src="main.js" defer></script>
-    <title>Document</title>
+    <title>Sign up form</title>
+
 </head>
 
 <body>
-    <div>
-        <h1>This is not a real online service! You know you need something like this in your life to help you realize
-            your
-            deepest dreams.
-            Sign up <em>now</em> to get started.
-        </h1>
-        <h1>You know you want to.</h1>
-        <p>Let's do this!</p>
 
 
-        <img src="/beach.jpg" alt="">
+    <div class="container">
+        <img src="/plant.jpg" class="background-container" alt="" />
+        <h5>This is not a real online service! You know you need something like this in your life to help you realize
+            your deepest
+            dreams. <br> Sign up <em>now</em> to get started.</h5>
+        <br>
+        <p> <strong>You <em>know</em> you want to.</strong></p>
     </div>
 
-    <form action="https://httpbin.org/get" id="primary-form" method="POST"></form>
-    <label for="first_name">FIRST NAME
-        <input type="text" id="first_name" name="first_name">
-    </label>
-    <label for="last_name">LAST NAME
-        <input type="text" id="last_name" name="last_name">
-    </label>
-    <label for="user_email">EMAIL
-        <input type="email" id="user_email" name="user_email">
-    </label>
-    <label for="user_phone_number">PHONE NUMBER
-        <input type="number" id="user_phone_number" name="user_phone_number">
-    </label>
-    <label for="user_password">PASSWORD
-        <input type="password" id="user_password" name="user_password" onChange="onChange()">
-    </label>
-    <label for="user_password_confirm">CONFIRM PASSWORD
-        <input type="password" id="user_password_confirm" name="user_password_confirm" onChange="onChange()">
-    </label>
-    <button type="submit">Submit</button>
-    </form>
+    <div class="odin-logo-container">
+        <img id="odin-logo" src="/odin-lined.png" alt="">
+        <p>ODIN</p>
+    </div>
+
+    <section style="background-color: gray; height: 400px;">
+        <p>Let's do this!</p>
+
+        <form action="https://httpbin.org/get" id="primary-form" method="POST"></form>
+        <label for="first_name">FIRST NAME
+            <input type="text" id="first_name" name="first_name">
+        </label>
+        <label for="last_name">LAST NAME
+            <input type="text" id="last_name" name="last_name">
+        </label>
+        <label for="user_email">EMAIL
+            <input type="email" id="user_email" name="user_email">
+        </label>
+        <label for="user_phone_number">PHONE NUMBER
+            <input type="number" id="user_phone_number" name="user_phone_number">
+        </label>
+        <label for="user_password">PASSWORD
+            <input type="password" id="user_password" name="user_password" onChange="onChange()">
+        </label>
+        <label for="user_password_confirm">CONFIRM PASSWORD
+            <input type="password" id="user_password_confirm" name="user_password_confirm" onChange="onChange()">
+        </label>
+        <button type="submit">Submit</button>
+        </form>
+
+    </section>
+<button type="submit">Create Account</button>
+<p>Already have an account? <a href="/login.html"></a></p>
+
+    <section>
+   
+
+
 
 </body>
 
