--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <p>ODIN</p>
     </div>
 
-    <section style="background-color: gray; height: 400px;">
-        <p>Let's do this!</p>
+    <section id="form-container">
+        <p><b>Let's do this!</b></p>
 
         <form action="https://httpbin.org/get" id="primary-form" method="POST"></form>
         <label for="first_name">FIRST NAME
@@ -38,27 +38,32 @@
         <label for="last_name">LAST NAME
             <input type="text" id="last_name" name="last_name">
         </label>
+        <br>
         <label for="user_email">EMAIL
             <input type="email" id="user_email" name="user_email">
         </label>
         <label for="user_phone_number">PHONE NUMBER
             <input type="number" id="user_phone_number" name="user_phone_number">
         </label>
+        <br>
         <label for="user_password">PASSWORD
             <input type="password" id="user_password" name="user_password" onChange="onChange()">
         </label>
         <label for="user_password_confirm">CONFIRM PASSWORD
             <input type="password" id="user_password_confirm" name="user_password_confirm" onChange="onChange()">
         </label>
-        <button type="submit">Submit</button>
+        <br>
+        <button type="submit">Create Account</button>
         </form>
 
     </section>
-<button type="submit">Create Account</button>
-<p>Already have an account? <a href="/login.html"></a></p>
+
+    <span>
+        <p>Already have an account? <a href="/login.html">Log in</a></p>
+    </span>
 
     <section>
-   
+
 
 
 
