--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div class="container">
-        <img src="/plant.jpg" class="background-container" alt="" />
+        <img src="plant.jpg" class="background-container" alt="" />
         <h5>This is not a real online service! You know you need something like this in your life to help you realize
             your deepest
             dreams. <br> Sign up <em>now</em> to get started.</h5>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="odin-logo-container">
-        <img id="odin-logo" src="/odin-lined.png" alt="">
+        <img id="odin-logo" src="odin-lined.png" alt="">
         <p>ODIN</p>
     </div>
 
