--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div class="container">
-        <img src="/plant.jpg" class="background-container" alt="" />
+        <img src="plant.jpg" class="background-container" alt="" />
         <h5>This is not a real online service! You know you need something like this in your life to help you realize
             your deepest
             dreams. <br> Sign up <em>now</em> to get started.</h5>
@@ -24,36 +24,37 @@
     </div>
 
     <div class="odin-logo-container">
-        <img id="odin-logo" src="/odin-lined.png" alt="">
+        <img id="odin-logo" src="odin-lined.png" alt="">
         <p>ODIN</p>
     </div>
 
     <section id="form-container">
         <p><b>Let's do this!</b></p>
 
-        <form action="https://httpbin.org/get" id="primary-form" method="POST"></form>
-        <label for="first_name">FIRST NAME
-            <input type="text" id="first_name" name="first_name">
-        </label>
-        <label for="last_name">LAST NAME
-            <input type="text" id="last_name" name="last_name">
-        </label>
-        <br>
-        <label for="user_email">EMAIL
-            <input type="email" id="user_email" name="user_email">
-        </label>
-        <label for="user_phone_number">PHONE NUMBER
-            <input type="number" id="user_phone_number" name="user_phone_number">
-        </label>
-        <br>
-        <label for="user_password">PASSWORD
-            <input type="password" id="user_password" name="user_password" onChange="onChange()">
-        </label>
-        <label for="user_password_confirm">CONFIRM PASSWORD
-            <input type="password" id="user_password_confirm" name="user_password_confirm" onChange="onChange()">
-        </label>
-        <br>
-        <button type="submit">Create Account</button>
+        <form action="https://httpbin.org/post" id="primary-form" method="post">
+            <label for="first_name">FIRST NAME
+                <input type="text" id="first_name" name="first_name">
+            </label>
+            <label for="last_name">LAST NAME
+                <input type="text" id="last_name" name="last_name">
+            </label>
+            <br>
+            <label for="email">EMAIL
+                <input type="email" id="email" name="email">
+            </label>
+            <label for="phone_number">PHONE NUMBER
+                <input type="number" id="phone_number" name="phone_number" required>
+            </label>
+            <br>
+            <label for="password">PASSWORD
+                <input type="password" id="password" name="password" required>
+            </label>
+            <label for="password_confirm">CONFIRM PASSWORD
+                <input type="password" id="password_confirm" name="password_confirm" required>
+            </label>
+            <div id="validPassword"></div>
+            <br>
+            <button onclick="onChange()" form="primary-form" type="button">Create Account</button>
         </form>
 
     </section>
