style: align odin logo and text

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     </div>
 
     <div class="odin-logo-container">
+        <p></p>
         <img id="odin-logo" src="odin-lined.png" alt="">
-        <p>ODIN</p>
     </div>
+
+    <p id="odin-text">ODIN</p>
 
     <section id="form-container">
         <p><b>Let's do this!</b></p>
@@ -54,7 +56,7 @@
             </label>
             <div id="validPassword"></div>
             <br>
-            <button onclick="onChange()" form="primary-form" type="button">Create Account</button>
+            <button onclick="onClick()" form="primary-form" type="button">Create Account</button>
         </form>
 
     </section>
